k8s_config/api-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api

spec:
  rules:
    - host: student.api.com
      http:
        paths:
          - backend:
              service:
                name: kubernetes-drf-api-service
                port:
                  number: 3001
            path: /
            pathType: ImplementationSpecific

    # - host:
    #   http:
    #     paths:
    #       - backend:
    #           serviceName:
    #           servicePort: 3001
